<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:text="@string/tv_phone_email"
        android:textSize="22sp" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/et_register_login"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="218dp"
        android:hint="1234567890"
        android:inputType="phone"
        android:typeface="monospace"
        app:keep_hint="true"
        mask:allowed_chars="1234567890"
        mask:mask="7(###)###-##-##" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="179dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress" />
    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_next"
        android:layout_alignParentLeft="true" />
</RelativeLayout>