<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="315dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="87dp"
        android:text="Пароль должен состоять минимум из 6 символов"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/et_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="157dp"
        android:text="Напримеря: 1qwe32rty4"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:hint="@string/et_password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginBottom="194dp"
        android:text="Подтвердите правильность ввода пароля"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/et_password" />

    <EditText
        android:id="@+id/et_check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginBottom="137dp"
        android:ems="10"
        android:hint="@string/et_check_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_set_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_create_account" />

</RelativeLayout>